tests/errors/attribute-repr-generic-value-field.ari
@repr(C)
struct ValueSlot[T] {
  value: T,
}

fn main() -> i64 {
  return 0;
}
